@@ -1,3 +1,8 @@
+2014-09-25  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/reclas.R (reclas): recursive location and scale ("recursive	median")
+	from Rolf Turner
+
 2013-03-28  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* man/covNNC.Rd:
